# FasterRisk

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  conda_env_FasterRisk.yml  jupyterNotebook.sh  pyproject.toml  requirements.txt
R_tutorial/: README.Rmd  README.md  environment.yml  header.Rmd  header.md
docs/: Makefile  added_functionalities_example.ipynb  conf.py  example.ipynb  make.bat
src/: export_JSON.py
src/data_input_CSV/: README.md
src/data_output_JSON/: adult_data_5-200-0.05-10-50.json  adult_data_5-200-0.1-10-50.json  adult_data_5-50-0.05-10-50.json  bank_data_5-200-0.1-10-50.json  bank_data_5-50-0.05-10-50.json  fico_data_5-200-0.05-10-50.json  fico_data_5-50-0.05-10-50.json  mammo_data_5-200-0.05-10-50.json  mammo_data_5-200-0.1-10-50.json  shroom_data_5-200-0.1-10-50.json
src/fasterrisk/: __init__.py  base_model.py  binarization_util.py  bounded_sparse_level_set.py  fasterrisk.py  fasterrisk_wrapper.py  heuristic_rounding.py  rounding.py  score_visual.py  sparseBeamSearch.py  sparseDiversePool.py  sparseDiversePoolModel.py  utils.py  wrapper.py
tests/: test_binarization_util.py  test_fasterrisk.py  test_fasterrisk_groupSparse.py  test_get_models_in_dict.py  test_rounding.py  test_sparseBeamSearch.py  test_sparseDiversePool.py  test_utils.py
use_FasterRisk_in_R/: FasterRisk_R_tutorial.Rmd
