[tool.poetry]
name = "fasterrisk"
version = "0.1.0"
description = "Create sparse and accurate risk scoring systems!"
authors = ["Jiachang Liu"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
