[tool.poetry]
name = "fasterrisk"
version = "0.1.10"
description = "Create sparse and accurate risk scoring systems!"
authors = ["Jiachang Liu <jiachang.liu@duke.edu>",
           "Chudi Zhong <chudi.zhong@duke.edu>",
           "Boxuan Li <boxuan.li@duke.edu>",
           "Margo Setlzer <mseltzer@cs.ubc.ca>",
           "Cynthia Rudin <cynthia@cs.duke.edu>"
]
maintainers = ["Jiachang Liu <jiachang.liu@duke.edu>"]
license = "BSD 3-Clause"
readme = "README.md"
homepage = "https://pypi.org/project/fasterrisk/"
repository = "https://github.com/jiachangliu/FasterRisk"
documentation = "https://fasterrisk.readthedocs.io/en/latest/" 

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
scikit-learn = "1.2.0"
pandas = "1.5.2"
requests = "^2.28.1"
matplotlib = "3.7.2"
pillow = "9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
